--- a/SyllabusEnergyEconomics.Rmd
+++ b/SyllabusEnergyEconomics.Rmd
@@ -134,14 +134,15 @@ Each topic has some readings that both undergraduates and graduate students will
     + Starting on Topic   
         + "Energy Primer: A Handbook of Energy Market Basics", FERC, 2015 (http://www.ferc.gov/market-oversight/guide/energy-primer.pdf), Chapter 1
         + Dahl, Ch 1-2.
+        + Good article for those considering regression based empirical paper. Murray, Michael P.. 2006. "Avoiding Invalid Instruments and Coping with Weak Instruments." Journal of Economic Perspectives, 20(4): 111-132. http://stats.lib.pdx.edu/proxy.php?url=https://www.aeaweb.org/articles?id=10.1257/jep.20.4.111
     + Coal
         + Dahl, Ch 3.
-        + Murray, Michael P.. 2006. "Avoiding Invalid Instruments and Coping with Weak Instruments." Journal of Economic Perspectives, 20(4): 111-132. http://stats.lib.pdx.edu/proxy.php?url=https://www.aeaweb.org/articles?id=10.1257/jep.20.4.111
+        + Black, Dan, Terra McKinnish, and Seth Sanders. "The Economic Impact of the Coal Boom and Bust." Economic Journal (2005): 449-476. https://www-jstor-org.proxy.lib.pdx.edu/stable/pdf/3590402.pdf
     + Natural Gas
         + Dahl, Ch 8.
         + Energy Primer, Ch 2.
         + Joskow, Paul L.. 2013. "Natural Gas: From Shortages to Abundance in the United States." American Economic Review, 103(3): 338-43. http://stats.lib.pdx.edu/proxy.php?url=https://www.aeaweb.org/articles?id=10.1257/aer.103.3.338
-        + Culver, Walter J., and Mingguo Hong. "Coal’s decline: Driven by policy or technology?." The Electricity Journal 29.7 (2016): 50-61. http://www.sciencedirect.com/science/article/pii/S104061901630121X
+        + Culver, Walter J., and Mingguo Hong. "Coal’s decline: Driven by policy or technology?." The Electricity Journal 29.7 (2016): 50-61. http://www.sciencedirect.com.proxy.lib.pdx.edu/science/article/pii/S104061901630121X
     + Electricity
         + Energy Primer, Ch 3. 
         + Dahl, Ch 5-6.   
