--- a/Energy Models and IV/EnergyModels.Rmd
+++ b/Energy Models and IV/EnergyModels.Rmd
@@ -39,19 +39,31 @@ qplot(Year, ProductionKShortTon, data = CoalProduction) + geom_smooth(method= lm
 ```
 
 # Trend Comments
-+ Regression with time as RHS variable. $Y = time + \epsilon$
-+ Other variables are often added, for example, weather variables.  You can see this in some integrated resource planning models.
-+ EC469 shows you how to do this.
-+ Not everything is a line.  You sometimes have to transform the data, logs and such are common.
-+ Only uses the past.  
-    + I was 90 lbs at 15, 110 at 17, 130 at 18 and 220 at 26.
-    + Today?
-+ People don't react to prices and there is no change in technology.
-+ That said, it works for a lot of things and work when you have little time.
-+ Plenty of energy modeling looks like this.
-    + "If you don't have the time, throw in a trend line."
++ General 
+    + Regression with time as RHS variable. $Y = time + \epsilon$
+    + Other variables are often added, for example, weather variables.  You can see this in some integrated resource planning models.
+    + EC469 shows you how to do this.
+    + Not everything is a line.  You sometimes have to transform the data, logs and such are common.
 
++ Problems
+    + Only uses the past and does not show turns in trend.
+        + I was 90 lbs at 15, 110 at 17, 130 at 18 and 220 at 26.
+        + Today?
+    + People don't react to prices and there is no change in technology. 
+        + See the coal data at the end.  That is the natural gas fracking boom.
+    + Growth of a subset can only exceed that of a superset for a while.  
+        + Facebook can only grow faster than the US, or world, economy for so long.
+
+# Trend Comments (Con't)
+
++ Advantages
+    + That said, it works for a lot of things and work when you have little time.
+    + Plenty of energy modeling looks like this.
+        + "If you don't have the time, throw in a trend line."
+    + For looking a few periods into the future -- it works.  For longer term forecasts -- don't do it.
+    
 # Time Series
+
 + Similar to trend only
     + May have $Y  = ARMA(p,q)$
     + or include a trend $Y = time + ARMA(p,q)$
@@ -59,11 +71,19 @@ qplot(Year, ProductionKShortTon, data = CoalProduction) + geom_smooth(method= lm
     + the MA part is past values of error term.
 + EC 472 shows you how to do this.
 + Most energy data has a trend to it, which must be included in the model.
-+ Best thought of as a refinement to the trend regressions with better treatment of residuals.
++ Best thought of, for now, as a refinement to the trend regressions with better treatment of residuals.
     + More accurate confidence intervals on existing data.
     + Slightly better with near-term forecasts.
-+ Same problems as pure regression on trend.
-+ If you have an extra few minutes, do this.
++ Similar problems as pure regression on trend.
+
+
+# There is way more to time series
+
++ Macro is heavy into this.
++ You may see macro heavy energy papers with Vector Autoregressions (VARs) which looks at many time series at once.
++ Nice example of quick use by Borenstein about the California Cap and Trade (https://ei.haas.berkeley.edu/research/papers/WP281.pdf)
+    + They produced the key result that the price will not be at a bound, upper or lower, only 19% of the time.
+    + Quick analysis.
 
 # Guess based on experience
 
@@ -72,6 +92,29 @@ qplot(Year, ProductionKShortTon, data = CoalProduction) + geom_smooth(method= lm
 + GDP even has components that are based on analyst's best judgement.
 + This can be combined with incentivised polls or parimutuel betting to make it work better.
   + The Iowa Electronic Markets are a common example, though there are others. https://tippie.biz.uiowa.edu/iem/markets/ 
+
+# Incentivized Polls
+
++ Guess Jamie's BMI.  Closest to the actual gets $10.
++ Skin in the game gives incentive for more thought.
++ Only works when you will eventually find out actual.
++ Oddly works better if you don't know how people are betting.
+    + Can produce group-think bubbles, if you see how others are betting.
+    + Easy to find the mode, but harder to tell if it is real.
++ Can get expensive with many winners:
+    + everyone guesses the same correct answer.
+    + More expensive when there is less certainty.
+  
+
+# Parimutuel Betting
+
++ Guess Jamie's BMI. Correct answers split the pot with the others that got it right.
++ Racetrack method.
++ Less likely to get bubbles, but
+    + Harder to see if there is a mode in the guess.
++ Cheaper than incentivized poll if high probability of multiple winners.
++ Cost does not increase with a priori certainty.
+
 
 # Survey Based
 
@@ -82,7 +125,7 @@ qplot(Year, ProductionKShortTon, data = CoalProduction) + geom_smooth(method= lm
 
 # Delphi Surveys
 
-+ Ask each person in private for best guess.
++ Ask each person _in private_ for best guess.
 + Compile results.
 + Ask outliers why they said what they did.
 + Give everyone:
@@ -102,13 +145,18 @@ qplot(Year, ProductionKShortTon, data = CoalProduction) + geom_smooth(method= lm
     + Decide how you would act now given that you know that that future will exist.
     + ?
     + Profit
-+ Example by National Renewable Energy Research Labratory (NREL) did one for Hawaii. http://www.nrel.gov/docs/fy12osti/52442.pdf 
++ Example by National Renewable Energy Research Laboratory (NREL) did one for Hawaii. http://www.nrel.gov/docs/fy12osti/52442.pdf
+    + Contractor reports tend to go long.
+    + See page 6 for summary of the scenarios.
+    + Contractor reports tend to use lots of acronyms.
+    + Plug in Hybrid Electric Vehicle (PHEV)
+    
 
 # Frequent use and abuse of scenarios analysis
 
 + Rigging scenarios so that only one is taken seriously. (abuse)
 + Choosing actions that will "work" in all scenarios. (abuse)
-+ Actual plans if a scenario becomes more likely, "Plans are worthless, but planning is everything." -Ike
++ Actual plans if a scenario becomes more likely, "Plans are worthless, but planning is everything." - Ike
 + Creation of real options
     + Defer action until more information is available.  Don't bring an umbrella everywhere, but have on near by if it starts to rain.
     + Create systems you can use when the situation is clearer.  Think peaking power plants that only run a few days a year.
@@ -137,6 +185,8 @@ $x_1 = \alpha_{1,1} x_1 + \alpha_{1,2} x_2 + d_1$
 
 Matrix Form
 $x=Ax +d$ is solved as $x=(I-A)^{-1}d$
+
+d is what you need to fight the war.
 
 # Warnings about the next models in book
 
@@ -193,3 +243,19 @@ $x=Ax +d$ is solved as $x=(I-A)^{-1}d$
         + Does it work on other people?
     + Ecological validity
         + Did the experiment look like the real world?
+        
+# Overarching
+
++ Every model is wrong
+    + By definition they are simplifications of reality and they leave out details.
+    + The real question is, "Did they leave out the right details?"
++ Don't be deluded into, "Just look at the data".
+    + You come to data with a model, you just don't know it.
+    + The data never speak for themselves. You use data to test/support/refute hypotheses/theories.
++ Using more than one model or technique and getting the same general result helps. It shows that your conclusion about reality is resilient to the implicit modeling assumptions.
++ Keep in mind that modeling is an iterative process often driven by the researcher.
+    + You try a model and then refine it based on the results.
+    + It is an iterative process.
+    + Your choices are molded by your objectives. "Get published" is common.
+    + Great working paper on this by Gelman that expands on this idea "The garden of forking paths: Why multiple comparisons can be a problem,
+even when there is no “fishing expedition” or “p-hacking” and the research hypothesis was posited ahead of time" (http://www.stat.columbia.edu/~gelman/research/unpublished/p_hacking.pdf)
