--- a/Energy Models and IV/IV.Rmd
+++ b/Energy Models and IV/IV.Rmd
@@ -13,7 +13,6 @@ knitr::opts_chunk$set(echo = FALSE)
 + This is about one  tool that can be used to establish causality.
 + It is not comprehensive
 + I take shortcuts and don't address some technical cases.
-+ I will try to stay away from linear algebra in my discussion.
 
 
 # Ordinary Least Squares
@@ -83,6 +82,95 @@ There are many technical conditions but "leaving out one or more" is easy one to
 + Put the forecasted endogenous variables, $\widehat{Price}_t$, in place of the observed endogenous variables, $Price_t$.
 + Run the equation with the new data $Q_{D,t} = \alpha + \beta_1 \widehat{Price}_t + \beta_2 Income_t + \epsilon_t$
 + Inflate the $var(\widehat{\beta_1})$ which is understated because you pretend you know $\widehat{Price}_t$ with certainty and the  OLS estimator  does not work.
+
+# The Actual IV estimator
+
+For the linear case OLS is:
+$$\beta_{OLS} = \left( X'X \right)^{-1} X'Y$$
+For linear IV it is:
+$$\beta_{OLS} = \left( Z'X \right)^{-1} Z'Y$$
+
+# Variance
+
+OLS estimates have a variance of
+$$var(\beta_{OLS}) = s^2 \left[ X'X \right]^{-1}$$
+IV Variance includes the instruments
+
+$$var(\beta_{OLS}) = s^2 \left[ X'(Z(Z'Z)^{-1}Z'     )      X \right]^{-1}$$
+The gunk in the middle, $Z(Z'Z)^{-1}Z'$ is projection,$Pr$, or hat matrix.  It turns data into its estimated values
+
+# Projection or Hat Matrix
+
+$$\beta_{OLS}=(X'X)^{-1}X'Y$$
+Multiply by $X$ to give
+
+$$\hat Y = X \beta_{OLS} = X(X'X)^{-1}X'Y = Pr Y$$
+It turns observed into estimated.
+
+# Projection matrices are funny
+
++ They are symmetric $Pr = 'Pr$
++ They are idempotent $Pr 'Pr = Pr$
++ $Pr X = X(X'X)^{-1}X'X = X$
+
+# Algebra Details
+
+For OLS you are solving this problem
+
+$$\min_{\beta} (Y - X \beta )'(Y - X\beta )$$
+
+Maximizing this gives
+
+$$\beta_{OLS} = \left( X'X \right)^{-1} X'Y$$
+
+# You will do that in econometrics, but if you are curious.
+
+$$\min _{\beta} Y'Y - X'\beta'Y - Y'X\beta + (X\beta)'(X\beta)$$
+$$ \frac{\partial}{\partial \beta} :  - X'Y - Y'X  + 2(X'X)\beta = -2 X'Y + 2(X'X)\beta $$
+
+$$X'Y = (X'X)\beta$$
+$$\beta = (X'X)^{-1}X'Y$$
+
+# Back to IV
+
+But lets pull that apart.  Note that $Y = X\beta + \epsilon$.
+
+$$\beta_{OLS}=\left( X'X \right)^{-1} X'Y = \left( X'X \right)^{-1} X' (X \beta + \epsilon) $$
+
+The $X'X$ terms cancel out to give
+
+$$ \beta_{OLS} = \beta + X' \epsilon$$
+$X' \epsilon$ is zero when $cov(x,\epsilon)$ but it isn't, i.e., the reason we are using IV, endogenaity. 
+
+# How to fix?
+
+The first stage regression is a "projection" onto the instruments. OLS is also a projection.
+
+![](OLSProjection.png)
+
+
+# Algebra
+
+First project the X variables onto the Z variables to get, $\hat x$ then project the y variable onto  $\hat x$ to get $\hat Y$ with the usual least squares method.
+
+$$\min_{\beta} (Y - Pr X \beta )'(Y - Pr X\beta )$$
+
+$$\min _{\beta} Y' Y - Pr X'\beta' Y -  Y' Pr X\beta + (Pr X\beta)'(Pr X\beta)$$
+Now take the derivative like before
+
+$$ \frac{\partial}{\partial \beta} :  - Pr X'Y -  Y' Pr X  + 2 (Pr' X' Pr X)\beta = -2 Pr' X'Y + 2(Pr'X' Pr X)\beta $$
+
+# Now the black magic
+
++ Start with  $\beta_{IV} =  (X' Pr X )^{-1}  X' Pr Y$.
++ Remember that $(AB)^{-1} = B^{-1} A^{-1}$
++ Swap in the definition of the projection matrix
+$$beta_{IV} =  (X' Z'(Z'Z)^{-1}Z' X )^{-1}  X' Z'(Z'Z)^{-1}Z' Y$$
++ Then use the AB trick
+$$(Z'X)^{-1}(X'Z'(Z'Z)^{-1})^{-1} X' Z'(Z'Z)^{-1}Z' Y$$
++ Work the inverses
+$$(Z'X)^{-1}(Z'Z)(X'Z')^{-1} (X' Z')(Z'Z)^{-1}Z' Y$$
++ Then cancel from the inside out to get $\beta_{IV} = \left( Z'X \right)^{-1} Z'Y$
 
 
 # Warnings
