--- a/IntroCoal/IntroCoal.Rmd
+++ b/IntroCoal/IntroCoal.Rmd
@@ -71,7 +71,22 @@ Anthracite| 90%+    | 28K+      |
 
 # Where do you find it in the US?
 
-# Where is it mined?
+![](https://upload.wikimedia.org/wikipedia/commons/8/89/US-Coalbed-Gas-Fields.jpg)
+
+# How do you mine it?
+
++ Surface (Most common in US)
+    + Open Pit
+    + Stip -  Take the overburden off, then it is like double digging in your graden.  Common in Western US coal mining
+    + Countour - Like strip for hills
+    + Mountaintop removal - Get coal off from under mountain top and throw it into the valley. An Appalachian thing
++ Underground mining
+    + 1000s of feet deep and for miles.
+    + Various techniques: Long wall, room and piller.
+    
+# Mountaintop Removal
+
+![](https://earthjustice.org/sites/default/files/styles/media_slideshow/public/ovec_mtr12_1.jpg)
 
 # Underground Fires
 
@@ -83,21 +98,82 @@ Anthracite| 90%+    | 28K+      |
 
 # How is it transported?
 
++ Railroads  68.7% of the domestic coal
++ River Barge  11.9%
++ Truck about 10.5% 
++ Tramway, Conveyor, and Slurry pipeline accounted for 8.9%. (Short distance)
+source: https://www.eia.gov/coal/distribution/annual/
+
+Keep in mind that transportation is often more expensive than mining.
+
+# Rail Map
+
+![](https://www.nap.edu/openbook/030911022X/xhtml/images/p200136eeg82001.jpg)
+
+# A few comments on the map
+
+That huge wave coming out of Wyoming wasn't there till the 90s.
+
++ That is Powder River
++ It has high sulfer and was not used until SOX controls on power plants were required in 1990.
++ Tends to be cheap
+      + BLM land
+      + Auctions on mining rights almost always had one bidder.
+      + Those mining rights are a current topic.
+
+# Burning Coal is a tradeoff
+
++ If you burn at high temperatures
+    + You get lots of kWh per BTU
+    + Generate more NOX and SOX
++ If yo burn at lower temperatures
+    + You less kWh per BTU
+    + Less NOX and SOX
+    + More particulates PM 10 and PM 2.5
+
+You either start with low sulfer coal, burn at lower temperature or scrub after.  Tradoffs depend on prices and technology.
+
 # Why coal?
 
 Historical point of view:
+
 + Coal burns hotter than wood, but so does charcoal.
 + Coal (anthrocite) burns with less ash and smoke than wood, but so does charcoal.
 + Charcoal requires a lot of wood to make.
 
+We could not keep up with heating and steel demand.  The first industrialized countries had good (anthrocite) coal with low transportation costs.
+
+# We tried with wood and Hydro
+
++ The UK and US killed a lot of trees to keep up.
++ UK would have run out of mill sites by 1830.
++ Even used intensive managment like pollarding to produce more wood.
+
+![](https://upload.wikimedia.org/wikipedia/commons/b/b7/D%C3%BClmen%2C_Umland_--_2014_--_14.jpg){ width=50% }
 
 # Metalurgical Uses
 
-# Household heating
++ You need carbon, and other things, to turn iron into coal.  
++ You also need carbon to smelt iron.
++ You need a lot of energy to do this.
++ Metalurgical coal is ~ \$200/ton.  Steam coal is <\$50/ton.
 
-# Steam Power
 
-# Electrical Generation
+# Electrical Generation from the outside
+
+![](http://appvoices.org/images/uploads/2012/02/Asheville-coal-plant-e1432059203783.jpg)
+Source: http://appvoices.org/images/uploads/2012/02/Asheville-coal-plant-e1432059203783.jpg
+
+# Coal on the inside
+
++ Pulverize the coal, picture something that can do 20 Tons/hr
++ Blow it into combustion chamber to burn
++ Steam turns turbine, etc. https://youtu.be/IdPTuwKEfmA
+
++ Clean up
+    + NOx with ammonia common but plenty of others
+    + Recover fly ash and sell it, great for concrete.
+    + SOx, Mercury and other.  BTW Radiation
 
 # US Production
 
@@ -107,4 +183,4 @@ Historical point of view:
 
 # Exports
 
-
+# Get Hands Dirty with Data
