--- a/IntroCoal/IntroCoal.Rmd
+++ b/IntroCoal/IntroCoal.Rmd
@@ -11,7 +11,7 @@ knitr::opts_chunk$set(echo = FALSE)
 
 + Start with boggy land.
 + The decaying plants turn into peat.
-+ The peat gets burried
++ The peat gets buried
 + Over  time, millions of years, turns into coal.
 + More time and more pressure (most of the time deeper), better coal.
 
@@ -29,8 +29,8 @@ In general, the deeper the coal the older it is and the more likely it is higher
 
 # Coal is often separated into two major groups.
 
-+ Metalurgical Coal: Expensive and almost pure carbon, used to make steel.  
-    + Coke, which is cooked coal, like charcoal is cooked wood, is  a frequent subsitute.
++ Metallurgical Coal: Expensive and almost pure carbon, used to make steel.  
+    + Coke, which is cooked coal, like charcoal is cooked wood, is  a frequent substitute.
 + Steam Coal: Used in electricity production.
     + "Steam Coal" is  different depending  on the country.
     
@@ -56,17 +56,17 @@ In general, the deeper the coal the older it is and the more likely it is higher
     + 1 BTU is enough to raises one lb of water 1 F.
     + EIA swaps from BTU/ton to BTU/lb frequently.  
     + (short) ton = 2000 lbs
-+ Sulfer can vary widely but except for lignite is less than 1%.  This is a polutant.
++ Sulfur can vary widely but except for lignite is less than 1%.  This is a pollutant.
 + Carbon content virtually defines the ranks.
 
 # The Numbers
 
 Type    | Carbon%   |BTU/ton    |
 -----   |-----      |-----      |
-Lignite |30%        |10K -15K   |
-Sub-Bituminous|40%  |16K -20K   |
-Bituminous| 50%-70% |22K -30K   |
-Anthracite| 90%+    | 28K+      |
+Lignite |30%        |10M -15M   |
+Sub-Bituminous|40%  |16M -20M   |
+Bituminous| 50%-70% |22M -30M   |
+Anthracite| 90%+    | 28M+      |
 
 
 # Where do you find it in the US?
@@ -77,12 +77,12 @@ Anthracite| 90%+    | 28K+      |
 
 + Surface (Most common in US)
     + Open Pit
-    + Stip -  Take the overburden off, then it is like double digging in your graden.  Common in Western US coal mining
-    + Countour - Like strip for hills
+    + Strip -  Take the overburden off, then it is like double digging in your garden.  Common in Western US coal mining
+    + Contour - Like strip for hills
     + Mountaintop removal - Get coal off from under mountain top and throw it into the valley. An Appalachian thing
 + Underground mining
     + 1000s of feet deep and for miles.
-    + Various techniques: Long wall, room and piller.
+    + Various techniques: Long wall, room and pillar.
     
 # Mountaintop Removal
 
@@ -91,7 +91,7 @@ Anthracite| 90%+    | 28K+      |
 # Underground Fires
 
 + Coal fires are a thing.  The most famous US fire is Centralia, which started in 1962.
-+ The most famous world wide is Mt Wingen in  New South Wales, which has been buring for 6,000 years.
++ The most famous world wide is Mt Wingen in  New South Wales, which has been burning for 6,000 years.
 + There are a few thousand burning at any given moment.
     + Besides CO2 and SOX
     + Mercury
@@ -115,7 +115,7 @@ Keep in mind that transportation is often more expensive than mining.
 That huge wave coming out of Wyoming wasn't there till the 90s.
 
 + That is Powder River
-+ It has high sulfer and was not used until SOX controls on power plants were required in 1990.
++ It has low sulfur and was not used until SOX controls on power plants were required in 1990.
 + Tends to be cheap
       + BLM land
       + Auctions on mining rights almost always had one bidder.
@@ -126,28 +126,28 @@ That huge wave coming out of Wyoming wasn't there till the 90s.
 + If you burn at high temperatures
     + You get lots of kWh per BTU
     + Generate more NOX and SOX
-+ If yo burn at lower temperatures
-    + You less kWh per BTU
++ If you burn at lower temperatures
+    + You get less kWh per BTU
     + Less NOX and SOX
     + More particulates PM 10 and PM 2.5
 
-You either start with low sulfer coal, burn at lower temperature or scrub after.  Tradoffs depend on prices and technology.
+You either start with low sulfur coal, burn at lower temperature or scrub after.  Trad-offs depend on prices and technology.
 
 # Why coal?
 
 Historical point of view:
 
 + Coal burns hotter than wood, but so does charcoal.
-+ Coal (anthrocite) burns with less ash and smoke than wood, but so does charcoal.
++ Coal (anthracite) burns with less ash and smoke than wood, but so does charcoal.
 + Charcoal requires a lot of wood to make.
 
-We could not keep up with heating and steel demand.  The first industrialized countries had good (anthrocite) coal with low transportation costs.
+We could not keep up with heating and steel demand.  The first industrialized countries had good (anthracite) coal with low transportation costs.
 
 # We tried with wood and Hydro
 
 + The UK and US killed a lot of trees to keep up.
 + UK would have run out of mill sites by 1830.
-+ Even used intensive managment like pollarding to produce more wood.
++ Even used intensive management like pollarding to produce more wood.
 
 ![](https://upload.wikimedia.org/wikipedia/commons/b/b7/D%C3%BClmen%2C_Umland_--_2014_--_14.jpg){ width=50% }
 
@@ -156,7 +156,7 @@ We could not keep up with heating and steel demand.  The first industrialized co
 + You need carbon, and other things, to turn iron into coal.  
 + You also need carbon to smelt iron.
 + You need a lot of energy to do this.
-+ Metalurgical coal is ~ \$200/ton.  Steam coal is <\$50/ton.
++ Metallurgical coal is ~ \$200/ton.  Steam coal is <\$50/ton.
 
 
 # Electrical Generation from the outside
@@ -174,13 +174,5 @@ Source: http://appvoices.org/images/uploads/2012/02/Asheville-coal-plant-e143205
     + NOx with ammonia common but plenty of others
     + Recover fly ash and sell it, great for concrete.
     + SOx, Mercury and other.  BTW Radiation
-
-# US Production
-
-# BLM and Leases
-
-# Price and Production History
-
-# Exports
 
 # Get Hands Dirty with Data
