--- a/IntroToRegression/IntroToRegression.Rmd
+++ b/IntroToRegression/IntroToRegression.Rmd
@@ -58,11 +58,11 @@ A
 C <- c("Tom", "Dick", "Harry")
 C
 C[[1]]
-C[1]
-1:1000
+C[c(1,2)]
+1:1000/500
 D <- 1:10
 D
-as.character(D)
+as.character(D)/2
 as.factor(D)
 
 summary(D)
@@ -77,7 +77,7 @@ There are many others, "list" being the most important not shown.
 
 ```{r}
 sqrt(D)
-# sqrt(A)
+#sqrt(A)
 
 sqrt(D[6])
 sqrt(D[1:3])
@@ -101,6 +101,7 @@ MyData$Y <-  100 - 2 * MyData$X + rnorm(20, mean = 0, sd = 1)
 
 names(MyData)
 
+
 names(MyData) <- c("Price","Quantity")
 names(MyData)
 summary(MyData)
@@ -116,6 +117,8 @@ MyData[1:3,]
 MyData[1:3,"Price"]
 MyData["Price"]
 MyData[c(1,5,8),]
+
+MyData[MyData$Price>20,]
 ```
 
 # Pictures
