--- a/IntroOil/IntroOil.Rmd
+++ b/IntroOil/IntroOil.Rmd
@@ -12,8 +12,19 @@ knitr::opts_chunk$set(echo = FALSE)
 ## Oil is for Cars
 
 + Keep in mind that oil is primarily a transportation fuel.
-    + Yes, some diesel and even crude is used for electricity production (5%), but
+    + Yes, some diesel and bunker oil is used for electricity production (5%), but
     + mostly we make gasoline and other commodities out of it.
+
++ Two common measurements
+    + US 42 gallon barrels when speaking to a merican or reporting numbers to them.
+    + Elsewhere you talk about cubic meters
+    + You will also see metric ton measurements in some areas.
+    + Note this is two volume and one mass measurement and densities are not uniform.
+
++ Barrel is abbreviated bbl
+    + Mbbl is thousand barrels not a million (Breaks the metric code)
+    + MMbbl is million barrels.
+    + Mbd is million barrels a day but so is MMbbl/day
 
 
 ## Oil is not a uniform commodity
@@ -44,16 +55,27 @@ knitr::opts_chunk$set(echo = FALSE)
     + Shale oil with limited transportation means WTI tends to be lower by a few dollars.
     + Will likely change
         + More pipelines
-        + Repeal of _mostly_ prohibited export of crude.
+        + Recent repeal of _mostly_ prohibited export of crude.
 
 + There are smaller price points by city and region
 + Many are specified as blends of typical out put of various regions.
 
+## The Ban and Repeal
+
++ Banned most exports of crude oil in 1975 as reaction to OPEC.
++ Could still export products, e.g., gasoline.
++ Problems
+    + The US is huge.
+    + Not always an easy way to get crude to refiners within the country.
+    + AK refineries have 270K BBL day capacity about the same as one refiner in CA.
+    + Refiners specialized in heavier sour oil.
+    + Fracking produces ligher oil but you couldn't export it
++ As of 2016 we export.
 
 ## Location
 
 + Refineries are tuned to a specific kind of oil
-    + If density or sulfur changes too much they have to remodel or variable suffer a cost hit.
+    + If density or sulfur changes too much they have to change and that costs
 + Oil in new areas needs transport
     + Truck
     + Rail
