--- a/IntroToElectricity/IntroToElectricity.Rmd
+++ b/IntroToElectricity/IntroToElectricity.Rmd
@@ -1,7 +1,6 @@
 ---
 title: "Intro to Electricity"
 author: "James Woods"
-date: "October 13, 2016"
 output: beamer_presentation
 ---
 
@@ -34,7 +33,7 @@ This is a logistical miracle.
     + Real Power, measured in W, it is what does the work.
     + Reactive power, measured in volt-amps (var),"r" tells you it is reactive, is what pushes the electricity around.
     + Apparent Power, is in volt-amps too (VA) is when you add the two together in a vector sense.
-    + Power Factor is the Real(W)/Apparent(VA), the sign is interesting because assumes induction.
+    + Power Factor is the Real(W)/Apparent(VA).
 
 ## What?
 
@@ -107,8 +106,9 @@ source: http://slideplayer.com/slide/5297074/
     + Not always constant, can differ by capacity factor (fraction of nameplate)
     + Not always symmetric, up different from down.
     + Used to follow the load.
-+ Heat rate, BTU in/ BTU out, only used for generation that uses a fuel.
-    + 1 is impossible but 1 kW = 3412 BTU.
++ Heat rate, BTU in/ BTU out, or BTU per kWh, only used for generation that uses a fuel.
+    + It is impossible but 1 kW = 3412 BTU.
+    + Not so streigt forward  for renewables (http://www.eia.gov/totalenergy/data/annual/pdf/sec17.pdf)
     + Recent average from EIA, https://www.eia.gov/electricity/annual/html/epa_08_01.html
 
 ## Coal from the outside
@@ -245,7 +245,7 @@ So, you spin a turbine
 ## Wind
 
 + You find a good wind resource NREL Class 3 and up (http://www.nrel.gov/gis/wind_detail.html)
-+ Put up a suitably rated 1.5MW windmill. 8MW is the largest I've hear about.
++ Put up a suitably rated 1.5MW windmill. 8MW is the largest I've hear about for land based but read about a ~10MW off shore.
 + Maintain them, upgrade them and if need be demo them.
 
 + What people complain about
@@ -291,6 +291,21 @@ So, you spin a turbine
 
 + What makes them special is:
     + Socially optimal output, MC = D, implies negative economic profit.
+
+## What a Natural Monopoly Looks Like in Q-Cost Space
+
+![](NaturalMonopoly.png)
+
+## What Rate of Return Regulation Looks like in Q-Cost Space
+
+![](NMWithQandPrice.png)
+
+## Sounds simple but
+
++ How do you know those costs?  They may not be known ahead of time.  They could be random.
++ There is more than one price for electricity and different prices for different customers.
++ Rate setting is a periodic judicial process most often using retrospective cost data but also using forecasts.
+
     
 
 ## The Goals of Regulation
@@ -299,24 +314,6 @@ So, you spin a turbine
 + Output should at socially optimal, MC = D, not private profit maximizing, MC = MR.
 + There should be incentives to produce at lowest cost within each time period.
 + There should be incentives to reduce costs from one time period to the next, through R&D, capital investments and technology improvements.
-
-## The goals of deregulation
-
-+ The goal was not to not regulate.  The goal was to only regulate what you must.
-    + Control of transmission was stifling cost reductions through competition.
-+ Don't take the vertically integrated structure, which was dictated by transaction costs as a given.
-    + FERC 888/889/2000 split the generation, transmission and distribution parts.
-    + ISO/RTO, mostly non-profits set up markets and perform tasks relating to transmission.
-    + If you are not in an ISO/RTO you still have to split out generation from transmission.  State law does this.
-    
-## What does an ISO/RTO do.
-
-+ Air traffic controllers for transmission.  The direct it, plan for expansion, set open prices, pay the people that own it, set prices to avoid congestion.
-+ Make sure people can see the prices for transmission, OASIS
-+ Organize wholesale markets.  Usually day ahead and real time, hour ahead.
-+ Markets for grid stability services: Regulation up/down, spinning, non-spinning, black start
-+ Meet NERC, and regional reliability requirements
-+ Make sure that no one is manipulating the markets and fix the rules so they can't
 
 ## Rate of Return Regulation
 
@@ -344,24 +341,6 @@ ROR requires normal economic profits but is often visualized in many different w
 Sub in $p(f(k,l))$ for monopoly.
 
 You probably want diagrams for this.
-
-## Questions for Wednesday
-
-1. Start with a natural monopoly, i.e., when average cost and MC are ever decreasing.  Show DWL, CS and PS when this firm profit maximizes.
-
-2. Again start with a natural monopoly.  Show DWL, CS and PS when this firm is subject to AC price regulation.
-
-3. Take a look at figure 1 in the original paper on the Averch - Johnson effect ( http://stats.lib.pdx.edu/proxy.php?url=https://www.jstor.org/stable/1812181?seq=1#page_scan_tab_contents).  Ignore most of the math unless you are into it.  Explain what is the A-J effect and why it happens with the simple isoquant-iso cost diagram. Explaining why ray 2 is where it is and why is the hard part.
-
-## What a Natural Monopoly Looks Like in Q-Cost Space
-
-## What Rate of Return Regulation Looks like in Q-Cost Space
-
-## Sounds simple but
-
-+ How do you know those costs?  They may not be known ahead of time.  They could be random.
-+ There is more than one price for electricity and different prices for different customers.
-+ Rate setting is a periodic judicial process most often using retrospective cost data but also using forecasts.
 
 ## "Revenue Requirement"
 
@@ -432,7 +411,7 @@ Terrible cost savings incentives.
         
 ## What ROR Regulation looks like in Input-Output Space.
 
-
+![](AJEffect.png)
 
 ## What about b?
 
@@ -467,3 +446,25 @@ CPI-X.  Prices increase periodically year by CPI less some amount X.  X is chose
 + But ...
     + Where did you get X?
     + How do you know costs will on average go down?
+
+
+
+## The goals of deregulation
+
++ The goal was not to not regulate.  The goal was to only regulate what you must.
+    + Control of transmission was stifling cost reductions through competition.
++ Don't take the vertically integrated structure, which was dictated by transaction costs as a given.
+    + FERC 888/889/2000 split the generation, transmission and distribution parts.
+    + ISO/RTO, mostly non-profits set up markets and perform tasks relating to transmission.
+    + If you are not in an ISO/RTO you still have to split out generation from transmission.  State law does this.
+    
+## What does an ISO/RTO do.
+
++ Air traffic controllers for transmission.  The direct it, plan for expansion, set open prices, pay the people that own it, set prices to avoid congestion.
++ Make sure people can see the prices for transmission, Open Access Same-Time Information System (OASIS).
++ Organize wholesale markets.  Usually day ahead and real time, hour ahead.
++ Markets for grid stability services: Regulation up/down, spinning, non-spinning, black start
++ Meet NERC, and regional reliability requirements
++ Make sure that no one is manipulating the markets and fix the rules so they can't
+
+
